--- a/resources/index.html
+++ b/resources/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
+    th:replace="~{fragments/layout :: layout(~{::title}, ~{::body})}">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
+
 <body>
     <a href="/products">Go to products</a>
 </body>
+
 </html>
