--- a/resources/orders/order.html
+++ b/resources/orders/order.html
@@ -4,35 +4,33 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cart</title>
+    <title th:text="'Order ' + ${order.orderId}"></title>
 </head>
 
 <body>
-    <h1>Cart</h1>
+    <h1>Order ID: <span th:text="${order.orderId}"></span></h1>
+    <p>Address: <span th:text="${order.address}"></span></p>
+    <p>Shipping to: <span th:text="${order.trackingId}"></span></p>
 
     <div style="display: flex; flex-direction: row; flex-gap: 8px">
-        <div class="card" style="width: 18rem;" th:each="product: ${cart}">
+        <div class="card" style="width: 18rem;" th:each="product: ${products}">
             <div class="card-body">
                 <h5 class="card-title" th:text="${product.name}">Card title</h5>
                 <h6 class="card-subtitle mb-2 text-body-secondary">$<span th:text="${product.price}"></span></h6>
                 <p class="card-text" th:text="${product.description}"></p>
                 <a th:href="'/products/'+${product.slug}" class="card-link">Go to product</a>
-                <button th:hx-delete="'/cart/'+${product.sku}" hx-swap="none" class="btn btn-primary">
-                    Remove product from cart
-                </button>
             </div>
         </div>
     </div>
 
-    <a th:if="${user.id}" href="/orders/create">
+
+    <a th:if="${user.isAdmin}" th:unless="${order.trackingId}" th:href="'/orders/' + ${order.orderId} + '/ship'">
         <button class="btn btn-primary">
-            Checkout
+            Ship
         </button>
     </a>
 
-    <p th:unless="${user.id}">
-        Please sign up or log in to checkout
-    </p>
+    <a href="/orders">Back</a>
 </body>
 
 </html>
